--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,7 @@
   color: #FFFFFF;
   position: relative;
   left: 700px;
-  font-size: 25px;
+  font-size: 20px;
   font-weight: bold;
 }
 .menu:hover{
@@ -43,7 +43,7 @@
   border-radius: 10px;
 }
 .submenu:hover{
-  color:#FF00BF; 
+  color:#FF00BF;
 }
 
 
@@ -77,17 +77,24 @@
   border-radius: 10px;
   padding: 1px;
   padding-top: 10px;
+  margin-bottom: 20px;
   width: 150px;
   height: 40px;
   float: left;
-  margin-top: 30px;
+  margin-top: 20px;
   position: relative;
-  left: 20px;
+  left: 50px;
   text-align: center;
+}
+.buttom:hover{
+  background-color: #FF00BF;
+  color: #FFFFFF;
 }
 .input>p{
   display: inline-block;
-
+  font-size: 10px;
+  float: left;
+  padding-left: 50px;
 }
 .links{
   color: #FF00BF;
@@ -113,12 +120,12 @@
   float: left;
   position: relative;
   left: 80px;
-  font-size: 20px;
+  font-size: 15px;
   width: 500px;
   height: 600px;
-  margin: 20px 30px;
-  text-indent: 5px;
-  font-stretch: semi-condensed;
+  margin: 30px 30px;
+  line-height: 5px;
+  letter-spacing: 1px;
 }
 
 .video{
@@ -177,26 +184,30 @@ padding-left: 100px;
   font-size: 20px;
 }
 .learn{
+  color: #000000;
   border-radius: 10px;
   padding: 10px;
-  width: 100px;
+  width: 150px;
   float: left;
   margin-top: 60px;
   border: 1px solid #000000;
 }
 .learn:hover{
-  background-color: #333447;
+  background-color: #C0C0C0;
 }
 .learn-2{
+  color: #000000;
   margin-top: 30px;
   border: 1px solid #000000;
   border-radius: 10px;
+  font-size: 20px;
   padding: 10px;
-  width: 100px;
+  width: 150px;
+  text-align: center;
   float: left;
 }
 .learn-2:hover{
-  background-color: #333447;
+  background-color:#C0C0C0;
 }
 
 
