--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,6 @@
 /*
- * Estilos de tu proyecto
- */
- h3{
-   font-size: 30px;
-   font-weight: bolder;
- }
+*creating the header
+*/
  nav{
      background-color:inherit;
      color: #FFFFFF;
@@ -17,40 +13,45 @@
      margin-top: 0;
  }
 
-
-
-
-
- #lyft{
-  position: relative;
-  left: 50px;
+ .menu{
+   width: 50px;
+   padding: 10px;
+   color: #FFFFFF;
+   position: relative;
+   left: 700px;
+   font-size: 20px;
+   font-weight: bold;
+ }
+ .menu:hover{
+   color:#FF00BF;
  }
 
-.menu{
-  width: 50px;
-  padding: 10px;
-  color: #FFFFFF;
-  position: relative;
-  left: 700px;
-  font-size: 20px;
-  font-weight: bold;
-}
-.menu:hover{
-  color:#FF00BF;
-}
+ #lyft{
+   position: relative;
+   left: 50px;
+ }
+
+
+/*
+*creating the header
+*/
+ h3{
+   font-size: 30px;
+   font-weight: bolder;
+ }
+
+
 #log{
   border: 1px solid #FFFFFF;
   border-radius: 10px;
 }
-.submenu:hover{
-  color:#FF00BF;
-}
 
-
-
+/*
+*creating the head
+*/
 .head{
-  display: inline-block;
   background-color: linear-gradient(#76278F, #2B1E66);
+  display: inline-block;
 
    }
 .img{
@@ -58,33 +59,33 @@
   background-repeat: no-repeat;
   background-size: cover;
   display: inline-block;
-  width: 1350px;
   height: 600px;
+  width: 1350px;
    }
 .input{
-  font-family: 'Montserrat', sans-serif;
   color: #352384;
   background-color: #FFFFFF;
-  width: 500px;
-  height: 380px;
+  font-family: 'Montserrat', sans-serif;
   float: right;
+  height: 380px;
   margin-top: 140px;
   padding: 30px;
   text-align: center;
+  width: 500px;
 }
 .buttom{
   border: 1px solid #000;
   border-radius: 10px;
+  float: left;
+  height: 40px;
+  left: 50px;
+  margin-bottom: 20px;
+  margin-top: 20px;
   padding: 1px;
   padding-top: 10px;
-  margin-bottom: 20px;
-  width: 150px;
-  height: 40px;
-  float: left;
-  margin-top: 20px;
   position: relative;
-  left: 50px;
   text-align: center;
+  width: 150px;
 }
 .buttom:hover{
   background-color: #FF00BF;
@@ -100,37 +101,43 @@
   color: #FF00BF;
 }
 
+/*
+*header
+*/
 .header{
  background-image: linear-gradient(#76278F, #2B1E66);
- width: 1326px;
  height: 700px;
+ width: 1326px;
  }
  #image{
    float: right;
+   margin: 10px 80px;
+   padding: 50px;
    position: relative;
    top: 20px;
-   padding: 50px;
-   margin: 10px 80px;
 }
 .text{
-  font-family: 'Montserrat', sans-serif;
   background-color: inherit;
   color: #FFFFFF;
-  text-align: left;
-  float: left;
-  position: relative;
-  left: 80px;
+  font-family: 'Montserrat', sans-serif;
   font-size: 15px;
-  width: 500px;
+  float: left;
   height: 600px;
-  margin: 30px 30px;
+  position: relative;
+  text-align: left;
+  left: 80px;
   line-height: 5px;
   letter-spacing: 1px;
+  margin: 30px 30px;
+  width: 500px;
 }
 
+/*
+*adding videos and text
+*/
 .video{
-  width: 1326;
   height: 700px;
+  width: 1326;
 }
 .more{
   color: #FF00BF;
@@ -138,12 +145,22 @@
 .video-text{
   font-family: 'Montserrat', sans-serif;
   font-size: 20px;
-  width: 350px;
-  height: 400px;
   float: left;
-  text-align: left;
+  height: 400px;
   padding-top: 200px;
   padding-left: 50px;
+  text-align: left;
+  width: 350px;
+}
+
+.video-1,.video-3{
+  float: right;
+  right: 30px;
+
+  }
+.video-2{
+  float: left;
+  left: 30px;
 }
 #video-text-2{
   font-family: 'Montserrat', sans-serif;
@@ -156,72 +173,66 @@
   padding-left: 50px;
 }
 
-.video-1,.video-3{
-  float: right;
-  right: 30px;
-
-  }
-.video-2{
-  float: left;
-  left: 30px;
-}
 
 
-
-
+/*
+*main
+*/
 .main{
   font-family: 'Montserrat', sans-serif;
-width: 1300px;
-height: 400px;
-background-color: #FFFFFF;
-padding: 30px;
-padding-left: 100px;
+  background-color: #FFFFFF;
+  height: 400px;
+  padding: 30px;
+  padding-left: 100px;
+  width: 1300px;
 }
 .main > span{
-  width: 600px;
-  height: 400px;
   float: left;
   font-size: 20px;
+  height: 400px;
+  width: 600px;
 }
 .learn{
-  color: #000000;
+  border: 1px solid #000000;
   border-radius: 10px;
-  padding: 10px;
-  width: 150px;
+  color: #000000;
   float: left;
   margin-top: 60px;
-  border: 1px solid #000000;
+  padding: 10px;
+  width: 150px;
 }
 .learn:hover{
   background-color: #C0C0C0;
 }
 .learn-2{
-  color: #000000;
-  margin-top: 30px;
   border: 1px solid #000000;
   border-radius: 10px;
+  color: #000000;
   font-size: 20px;
+  float: left;
+  text-align: center;
+  margin-top: 30px;
   padding: 10px;
   width: 150px;
-  text-align: center;
-  float: left;
 }
 .learn-2:hover{
   background-color:#C0C0C0;
 }
 
-
+/*
+*foot
+*/
 .foot{
-  width: 1326;
+  background-color: #352384;
+  font-size: 20px;
   height: 400px;
   left: 20px;
-  font-size: 20px;
   padding: 20px;
-  background-color: #352384;
+  width: 1326;
 }
 .text-fo{
-  font-family: 'Montserrat', sans-serif;
   color: #FFFFFF;
+  font-family: 'Montserrat', sans-serif;
   float: right;
   margin: 50px 60px;
 }
@@ -229,64 +240,67 @@ padding-left: 100px;
   color: #FF00BF;
 }
 
-
+/*
+*footer
+*/
 footer{
-  font-family: 'Montserrat', sans-serif;
-  width: 1326;
-  height: 700px;
   background-color:#333447;
-}
-.column{
-  color: #FFFFFF;
-  margin: 40px;
-  padding-left: 50px;
-  float: left;
-}
-.column-1 >p:hover{
-color: #FF00BF;
-}
-.hov:hover{
-  color: #FF00BF;
+  font-family: 'Montserrat', sans-serif;
+  height: 700px;
+  width: 1326;
 }
 .column-1{
   color: #FFFFFF;
-  margin: 40px;
   float: left;
-    padding-left: 50px;
+  margin: 40px;
+  padding-left: 50px;
+}
+.column-1 >p:hover{
+  color: #FF00BF;
+}
+.column{
+  color: #FFFFFF;
+  float: left;
+  margin: 40px;
+  padding-left: 50px;
 }
 .column > h4{
   color:  #728099;
   font-weight: bolder;
 }
 .column-img{
-  padding: 90px 90px;
   float: right;
+  padding: 90px 90px;
 }
-#end{
+.fa{
+  border: 1px solid #FFFFFF;
+  border-radius: 90%;
   color: #FFFFFF;
-  width: 700px;
-  height: 400px;
-  position: relative;
-  left: 300px;
+  padding: 10px;
+  margin: 15px;
+  margin-top: 100px;
 }
-#foot {
-  color: #FFFFFF;
-  text-align: center;
-  margin-bottom: 0px;
-  float: none;
-  bottom: 50px;
-  }
-  .fa{
-    color: #FFFFFF;
-    border: 1px solid #FFFFFF;
-    border-radius: 90%;
-    padding: 10px;
-    margin: 15px;
-    margin-top: 100px;
-  }
+.hov:hover{
+  color: #FF00BF;
+}
 .link{
   margin: 10px;
 }
 .link:hover{
   color: #FF00BF;
+}
+
+#end{
+  color: #FFFFFF;
+  height: 400px;
+  width: 700px;
+  position: relative;
+  left: 300px;
+}
+#foot {
+  bottom: 50px;
+  color: #FFFFFF;
+  float: none;
+  margin-bottom: 0px;
+  text-align: center;
 }
